[package]
name = "rustnzb"
version = "0.1.0"
edition = "2021"
authors = ["Finley"]
description = "A CLI-based NZB client written in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.31"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
indicatif = "0.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bytes = "1.5"
async-trait = "0.1"
dotenv = "0.15"
directories = "5.0"
zip = "0.6"
rar = "0.2"
sevenz-rust = "0.5"
regex = "1.10"
sanitize-filename = "0.5"
yenc = "0.1"
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"
thiserror = "1.0"
